<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTitle"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/infoTitle" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/infoTextTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTitle2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/infoTitle2" />

            <TextView
                android:id="@+id/titleText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addView"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoAddView"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/titleText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultView"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoResultView"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                app:srcCompat="@android:drawable/ic_menu_share" />

            <TextView
                android:id="@+id/descText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoShare"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnGoBack"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnGoBack" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>